--- a/GOLD-CALCULATOR-WORDPRESS-READY-FINAL/package.json
+++ b/GOLD-CALCULATOR-WORDPRESS-READY-FINAL/package.json
@@ -1,12 +1,15 @@
 {
   "name": "gold-calculator-frontend",
   "version": "1.0.0",
-  "description": "Static gold calculator site",
+  "description": "Gold Calculator Frontend Static Site for Railway",
   "main": "index.html",
   "scripts": {
-    "start": "npx serve ."
+    "start": "npx serve -s . -p $PORT"
   },
   "dependencies": {
     "serve": "^14.2.1"
+  },
+  "engines": {
+    "node": ">=16.x"
   }
 }
